plugins {
    id 'java'
    alias(libs.plugins.spring.boot) apply false
    alias(libs.plugins.spring.dependency.management)
    alias(libs.plugins.spotless)
}

allprojects {
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'com.diffplug.spotless'
    apply plugin: 'checkstyle'

    group = 'com.uit'
    version = '1.0-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
        developmentOnly
        runtimeClasspath {
            extendsFrom developmentOnly
        }
        configureEach {
            exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
        }
    }

    // Centralized dependency management
    dependencyManagement {
        imports {
            mavenBom "org.springframework.modulith:spring-modulith-bom:${libs.versions.springModulith.get()}"
        }
    }

    // Common dependencies for all subprojects
    dependencies {
        compileOnly libs.lombok
        annotationProcessor libs.lombok

        developmentOnly libs.spring.boot.devtools

        testImplementation libs.bundles.testing.common
    }

    spotless {
        java {
            target 'src/**/*.java'
            googleJavaFormat()
            importOrder()
            removeUnusedImports()
            trimTrailingWhitespace()
            endWithNewline()
        }
    }

    checkstyle {
        toolVersion = libs.versions.checkstyle.get()
        configFile = rootProject.file('config/checkstyle/google_checks.xml')
        maxWarnings = 0
        configProperties = [
                'org.checkstyle.google.suppressionfilter.config':
                        rootProject.file('config/checkstyle/checkstyle-suppressions.xml').absolutePath
        ]
    }

    tasks.named('test') {
        useJUnitPlatform()
        // Performance tuning
        maxHeapSize = '1G'
        jvmArgs = ['-XX:+UseParallelGC']
    }

    tasks.named("build") {
        dependsOn 'spotlessCheck'
    }
}
